🚀 Add comprehensive speed optimizations and timeout handling
SPEED OPTIMIZATIONS:
- Reduce API tokens from 4000→1500 for faster generation
- Shorter, focused prompts for quicker responses
- 25-second server timeout (before Vercel's 30s limit)
- Fast fallback generation if AI fails
- Minimal file generation to reduce processing time

TIMEOUT HANDLING:
- Client-side 28s timeout with Promise.race
- Progress bar with real-time updates
- Time counter showing elapsed seconds
- User-friendly error messages for timeouts
- Speed tips to help users generate faster

FALLBACK SYSTEM:
- Always returns something (even if AI times out)
- Beautiful fallback apps with proper themes
- No more complete failures
- Graceful degradation

VERCEL OPTIMIZATION:
- Increased memory allocation to 1024MB
- Optimized function configuration
- Better error handling and logging

This should eliminate the 30-second timeout issues completely!

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "pages/api/generate-app.ts": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 1024
     }
   }
 }
